--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 ---
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.2.3
+    rev: v2.3.0
     hooks:
       - id: check-byte-order-marker
       - id: check-case-conflict
@@ -11,6 +11,7 @@ repos:
       - id: check-yaml
         args: ['--allow-multiple-documents']
       - id: debug-statements
+      - id: detect-private-key
       - id: end-of-file-fixer
       - id: flake8
       - id: mixed-line-ending
@@ -23,16 +24,16 @@ repos:
     hooks:
       - id: shell-lint
   - repo: https://github.com/Lucas-C/pre-commit-hooks
-    rev: v1.1.6
+    rev: v1.1.7
     hooks:
       - id: remove-tabs
         exclude_types: [makefile, binary]
   - repo: https://github.com/asottile/reorder_python_imports
-    rev: v1.5.0
+    rev: v1.6.1
     hooks:
       - id: reorder-python-imports
   - repo: https://github.com/adrienverge/yamllint.git
-    rev: v1.16.0
+    rev: v1.17.0
     hooks:
       - id: yamllint
   - repo: https://github.com/danielhoherd/pre-commit-hooks
