--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,12 @@
 ---
 repos:
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: "v2.2.1"
+    hooks:
+      - id: prettier
+        args: ["--print-width=135"]
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.2.0
+    rev: v3.4.0
     hooks:
       - id: check-byte-order-marker
       - id: check-case-conflict
@@ -9,12 +14,15 @@ repos:
       - id: check-merge-conflict
       - id: check-xml
       - id: check-yaml
-        args: ['--allow-multiple-documents']
+        args: ["--allow-multiple-documents"]
       - id: debug-statements
       - id: detect-private-key
       - id: end-of-file-fixer
+      - id: file-contents-sorter
+        args: ["--ignore-case", "--unique"]
+        files: '^\.gitignore$'
       - id: mixed-line-ending
-        args: ['--fix=lf' ]
+        args: ["--fix=lf"]
       - id: requirements-txt-fixer
       - id: sort-simple-yaml
       - id: trailing-whitespace
@@ -28,23 +36,22 @@ repos:
       - id: remove-tabs
         exclude_types: [makefile, binary]
   - repo: https://github.com/asottile/reorder_python_imports
-    rev: v2.3.5
+    rev: v2.4.0
     hooks:
       - id: reorder-python-imports
   - repo: https://github.com/adrienverge/yamllint.git
-    rev: v1.24.2
+    rev: v1.26.0
     hooks:
       - id: yamllint
   - repo: https://github.com/danielhoherd/pre-commit-hooks
-    rev: 07f5a00b0f7d7856d602baf5e530a4d4472d7bf3
+    rev: bd325c947efcba13c03b4f4c93d882f2f83ed6ff
     hooks:
       - id: CVE-2017-18342
       - id: remove-unicode-zero-width-space
       - id: remove-unicode-non-breaking-spaces
       - id: remove-unicode-zero-width-non-breaking-spaces
       - id: remove-en-dashes
-      - id: sort-gitignore
   - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.8.3
+    rev: 3.8.4
     hooks:
       - id: flake8
