--- a/regex-groups/regex-groups.yml
+++ b/regex-groups/regex-groups.yml
@@ -1,5 +1,5 @@
 ---
-- name: Illustrate replaceing text with regex
+- name: Show ways to use regex to create facts and replace textfile contents
   gather_facts: false
   hosts: localhost
 
